Small CSS fixes to fix overflow and home page (bottom) image bug

--- a/new_section/src/assets/scss/app.scss
+++ b/new_section/src/assets/scss/app.scss
@@ -46,7 +46,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   display: grid;
   grid-template-columns: min-content auto;
-  overflow: scroll;
+  overflow: auto;
+  overflow-x: hidden;
 }
 
 #portfolio {
